# VkDemo

./: .gitignore  CMakeLists.txt  MVP.h  Model.cpp  Model.h  Queues.h  README.md  SpvLoader.h  SwapChainSupport.h  Triangle.cpp  Triangle.h  Vertex.h  main.cpp
shaders/: frag.spv  shader.frag  shader.vert
